Translated ToS to EN

--- a/en/tos.html
+++ b/en/tos.html
@@ -21,9 +21,9 @@
         <a href="/en/tos" class="btn radius-btn py-3 px-2">EN</a>
       </div>
       <div class="mx-auto w-70vw">
-        <h1 class="title-main">Najbardziej<br>przyjazny<br>streetwear bot.</h1><br>
-        <a href="/pl/" class="btn radius-btn py-3 px-3"><i class="fa fa-undo"></i></a>
-        <a href="#more" class="btn radius-btn py-3 px-3"><i class="fa fa-caret-down"></i> WIĘCEJ</a>
+        <h1 class="title-main">The world's<br>friendliest<br>streetwear bot.</h1><br>
+        <a href="/em/" class="btn radius-btn py-3 px-3"><i class="fa fa-undo"></i></a>
+        <a href="#more" class="btn radius-btn py-3 px-3"><i class="fa fa-caret-down"></i> MORE</a>
       </div>
       <img src="/static/img/example_en.png" class="example">
     </div>
@@ -32,116 +32,116 @@
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6">
             <div class="section-title text-center">
-              <h2>Regulamin świadczenia usług drogą elektroniczną</h2>
+              <h2>Dropthon<br>Terms of Service</h2>
             </div>
           </div>
         </div>
         <div>
-          <h5><b>§</b> Postanowienia ogólne</h5><br>
-          <p><b>1.</b> Ilekroć w niniejszym Regulaminie są użyte następujące określenia, należy przez nie rozumieć:</p>
+          <h5><b>§</b> General provisions</h5><br>
+          <p><b>1.</b> Whenever the following terms are used in these Regulations, they should be understood as:</p>
           <p class="ml-3">
-            <b>2.</b> <u>Serwis</u> - serwis internetowy dostępny pod adresem <a href="https://dropthon.com/pl/" class="text-danger">dropthon.com</a>;<br>
-            <b>3.</b> <u>Administrator, Usługodawca</u> - Stanisławowski Research & Development;<br>
-            <b>4.</b> <u>Użytkownik, Usługobiorca</u> - każda osoba, która dokonała rejestracji konta w Serwisie oraz korzysta z jego funkcjonalności;<br>
-            <b>5.</b> <u>Formularz rejestracyjny</u> - formularz wypełniany przez Użytkownika, służący do rejestracji w Serwisie<br>
-            <b>6.</b> <u>Regulamin</u> - niniejszy regulamin;<br>
-            <b>7.</b> <u>Usługi</u> - usługi świadczone przez Usługodawcę w ramach Serwisu internetowego;<br>
-            <b>8.</b> <u>Drop</u> - premiera kolekcji ubrań w danym sklepie
+            <b>2.</b> <u>Service</u> - website available at <a href="https://dropthon.com/en/" class="text-danger">dropthon.com</a>;<br>
+            <b>3.</b> <u>Administrator, Service Provider</u> - Stanisławowski Research & Development;<br>
+            <b>4.</b> <u>User</u> - any person who has registered an account on the Website and uses its functionality;<br>
+            <b>5.</b> <u>Registration form</u> - a form filled in by the User, used to register on the Website;<br>
+            <b>6.</b> <u>ToS</u> - these Terms of Service;<br>
+            <b>7.</b> <u>Services</u> - services provided by the Service Provider as part of the Website;<br>
+            <b>8.</b> <u>Drop</u> - premiere of the clothes collection in a given store
           </p>
-          <p><b>2.</b> Niniejszy Regulamin określa:</p>
+          <p><b>2.</b> These Terms of Service define:</p>
           <p class="ml-3">
-            <b>a.</b> rodzaj, zakres oraz warunki świadczenia usług drogą elektroniczną przez Administratora;<br>
-            <b>b.</b> prawa i obowiązki Użytkowników i Usługodawcy
+            <b>a.</b> type, scope and conditions for the provision of electronic services by the Administrator;<br>
+            <b>b.</b> rights and obligations of the User and the Service Provider
           </p><br>
-          <h5><b>§</b> Wymogi techniczne</h5><br>
-          <p><b>1.</b> Do korzystania z Serwisu, niezbędne jest spełnienie następujących minimalnych wymagań technicznych:</p>
+          <h5><b>§</b> Technical requirements</h5><br>
+          <p><b>1.</b> In order to use the Website, it is necessary to meet the following minimal technical requirements:</p>
           <p class="ml-3">
-            <b>1.</b> posiadanie komputera lub innego urządzenia multimedialnego;<br>
-            <b>2.</b> dostęp do sieci Internet;<br>
-            <b>3.</b> posiadanie przeglądarki internetowej ze wsparciem dla HTML5 i CSS3;<br>
-            <b>4.</b> posiadanie aktywnego konta poczty elektronicznej (e-mail)<br>
+            <b>1.</b> a computer or other multimedia device;<br>
+            <b>2.</b> Internet access;<br>
+            <b>3.</b> a web browser with HTML5 and CSS3 support;<br>
+            <b>4.</b> an active e-mail account<br>
           </p><br>
-          <h5><b>§</b> Usługi</h5><br>
-          <p><b>1.</b>  Dropthon świadczy usługi drogą elektroniczną za pomocą serwisu internetowego <a href="https://dropthon.com/pl/" class="text-danger">dropthon.com</a>:</p>
+          <h5><b>§</b> Services</h5><br>
+          <p><b>1.</b>  Dropthon provides services electronically via <a href="https://dropthon.com/en/" class="text-danger">dropthon.com</a> website:</p>
           <p class="ml-3">
-            <b>1.</b> Usługa Strony;<br>
-            <b>2.</b> Usługa Panelu użytkownika;<br>
-            <b>3.</b> Usługa Bota<br>
+            <b>1.</b> Website Service;<br>
+            <b>2.</b> User panel Service;<br>
+            <b>3.</b> Bot service<br>
           </p>
-          <p><b>2.</b> Usługa Strony polega na:</p>
+          <p><b>2.</b> The Website Service consists in:</p>
           <p class="ml-3">
-            <b>1.</b> Udostępnianiu treści i informacji o Serwisie, zakresie działalności Dropthona, informacji związanych ze świadczonymi produktami i usługami<br>
-            <b>2.</b> Udostępnianiu odnośników do portali społecznościowych lub innych stron powiązanych ze świadczonymi Usługami.<br>
+            <b>1.</b> Providing content and information about the scope of Dropthon's activities, information related to the products and services provided;<br>
+            <b>2.</b> Providing links to social networks or other pages related to the Services provided.<br>
           </p>
-          <p><b>3.</b> Usługa Panelu użytkownika polega na:</p>
+          <p><b>3.</b> The User panel service consists in:</p>
           <p class="ml-3">
-            <b>1.</b> Umożliwieniu przeglądania nadchodzących Dropów, pobranych ze stron wspieranych sklepów;<br>
-            <b>2.</b> Umożliwieniu edycji, bądź usunięcia swoich danych osobowych z naszej bazy danych;<br>
-            <b>3.</b> Umożliwieniu zmiany ustawień Usługi Bota;<br>
-            <b>4.</b> Umożliwieniu realizacji płatności za oferowane przez Administratora usługi.<br>
+            <b>1.</b> Enabling Users to view upcoming Drops, downloaded from the websites of supported stores;<br>
+            <b>2.</b> Enabling Users to edit or delete their personal data from our database;<br>
+            <b>3.</b> Enabling Users to edit settings of the Bot service;<br>
+            <b>4.</b> Enabling Users to execute payments for the services provided by the Administrator.<br>
           </p>
-          <p><b>4.</b> Usługa Bota polega na:</p>
+          <p><b>4.</b> The Bot service consists in:</p>
           <p class="ml-3">
-            <b>1.</b> Realizacji usługi kupienia przedmiotu z zaplanowanego Dropa.<br>
+            <b>1.</b> Execution of the service of buying an item from a scheduled Drop.<br>
           </p><br>
-          <h5><b>§</b> Rejestracja i logowanie</h5><br>
-          <p><b>1.</b> Umowa o świadczenie Usług zostaje zawarta z Usługobiorcą z chwilą prawidłowego wypełnienia Formularza rejestracyjnego i założenia konta.</p>
-          <p><b>2.</b> Prawidłowe wypełnienie Formularza rejestracyjnego polega na podaniu nazwy użytkownika, adresu e-mail oraz hasła.</p>
-          <p><b>3.</b> Użytkownik wypełniając i wysyłając Formularz rejestracyjny oświadcza, że:</p>
+          <h5><b>§</b> Registration and login</h5><br>
+          <p><b>1.</b> The contract for the provision of Services is concluded with the Customer upon the correct submission of the Registration form and creation of an account.</p>
+          <p><b>2.</b> The correct completion of the Registration form consists in submitting the username, e-mail address and password.</p>
+          <p><b>3.</b> By completing and submitting the Registration form, the User declares that:</p>
           <p class="ml-3">
-            <b>a.</b> podane w nim dane są kompletne, zgodne ze stanem faktycznym oraz nie naruszają jakichkolwiek praw osób trzecich,<br>
-            <b>b.</b> jest uprawniony do zawarcia umowy o świadczenie Usługi.
+            <b>a.</b> the data provided are complete, consistent with the facts and do not violate any rights of third parties,<br>
+            <b>b.</b> is qualified to conclude a contract for the provision of the Service.
           </p>
-          <p><b>4.</b> Adres poczty elektronicznej będzie wykorzystywany do wszelkiej korespondencji związanej ze świadczeniem Usługi.</p>
-          <p><b>5.</b> Usługodawca może odmówić utworzenia konta, zablokować lub usunąć istniejące konto, jeżeli jego nazwa jest już używa w bazie danych.</p>
-          <p><b>6.</b> Rejestracja konta w Serwisie jest dobrowolna i bezpłatna.</p>
-          <p><b>7.</b> Po zarejestrowaniu konta w Serwisie internetowym każdorazowe logowanie odbywa się przy użyciu danych podanych w Formularzu rejestracyjnym.</p><br>
-          <h5><b>§</b> Prawa i obowiązki Usługodawcy i Użytkowników</h5><br>
-          <p><b>1.</b> Usługodawca zastrzega sobie prawo do:</p>
+          <p><b>4.</b> The e-mail address will be used for all correspondence related to the provision of the Service.</p>
+          <p><b>5.</b> The service provider may refuse to create an account, block or delete an existing account if its name is already used in the database.</p>
+          <p><b>6.</b> Account registration on the Website is voluntary and free.</p>
+          <p><b>7.</b> After registering an account on the Website, each login is performed using the data provided in the Registration form.</p><br>
+          <h5><b>§</b> Rights and obligations of the Service Provider and Users</h5><br>
+          <p><b>1.</b> The Service Provider reserves the right to:</p>
           <p class="ml-3">
-            <b>a.</b> przejściowego zaprzestania świadczenia Usługi ze względu na czynności konserwacyjne lub związane z modyfikacją Serwisu,<br>
-            <b>b.</b> wysyłania komunikatów technicznych związanych z funkcjonowaniem Usługi,<br>
-            <b>c.</b> odmowy świadczenia Usług jeśli Użytkownik narusza Regulamin,<br>
-            <b>d.</b> dowolnej modyfikacji świadczonych Usług, narzędzi oraz sposobu działania Serwisów, w celu poprawy działalności Serwisu.<br>
+            <b>a.</b> temporary disable the Service due to maintenance or modification of the Website,<br>
+            <b>b.</b> send technical messages related to the functioning of the Service,<br>
+            <b>c.</b> refuse to provide Services if the User violates the Terms of Service,<br>
+            <b>d.</b> any modification of the Services provided, tools and methods of operation of the Websites in order to improve the operation of the Website.<br>
           </p>
-          <p><b>2.</b> Usługodawca zastrzega sobie prawo do zaprzestania świadczenia Usługi, usunięcia wszelkich danych Usługobiorców oraz podjęcia wszelkich innych dozwolonych prawem czynności związanych z Serwisem.</p>
-          <p><b>3.</b> Użytkownik ma prawo do zarządzania swoimi danymi w dowolnym momencie, za pośrednictwem zakładki "Konto" w Serwisie.</p><br>
-          <h5><b>§</b> Zmiana Regulaminu</h5><br>
-          <p><b>1.</b> Regulamin może zostać zmieniony przez Usługodawcę z zastrzeżeniem, że zaktualizowany Regulamin zostanie udostępniony w Serwisie internetowym.</p>
-          <p><b>2.</b> W przypadku braku akceptacji zmiany Regulaminu przez Usługobiorcę, może on usunąć Konto i wówczas postanowienia nowego Regulaminu nie będą miały wobec niego zastosowania.</p>
-          <p><b>3.</b> Użytkownikowi, który nie akceptuje wprowadzonych w Regulaminie zmian, przysługuje uprawnienie do rozwiązania umowy o świadczenie Usług drogą elektroniczną.</p><br>
-          <h5><b>§</b> Postępowanie reklamacyjne</h5><br>
-          <p><b>1.</b> Użytkownik ma prawo złożyć reklamację w sprawie dotyczącej realizacji Usług.</p>
-          <p><b>2.</b> Reklamacje rozpatruje Usługodawca.</p>
-          <p><b>3.</b> Prawidłowo złożona reklamacja powinna zawierać następujące dane:</p>
+          <p><b>2.</b> The Service Provider reserves the right to discontinue the provision of the Service, delete all data of the Service Users and take any other actions permitted by law related to the Website.</p>
+          <p><b>3.</b> The User has the right to manage his data at any time via the "Account" page on the Website.</p><br>
+          <h5><b>§</b> Changing the Terms of Service</h5><br>
+          <p><b>1.</b> The Terms of Service may be changed by the Service Provider, provided that the updated Terms of Service will be available on the Website.</p>
+          <p><b>2.</b> If the Customer does not accept the amendment to the Terms of Service, he may delete the Account and then the provisions of the new Terms of Service will not apply to him.</p>
+          <p><b>3.</b> A User who does not accept the changes introduced in the Terms of Service has the right to terminate the contract for the provision of Services by electronic means.</p><br>
+          <h5><b>§</b> Complaints procedure</h5><br>
+          <p><b>1.</b> The User has the right to file a complaint regarding the implementation of the Services.</p>
+          <p><b>2.</b> Complaints are handled by the Service Provider.</p>
+          <p><b>3.</b> A correctly submitted complaint should contain the following data:</p>
           <p class="ml-3">
-            <b>a.</b> imię, nazwisko oraz adres poczty elektronicznej użytkownika;<br>
-            <b>b.</b> nazwę Usługi, której reklamacja dotyczy;<br>
-            <b>c.</b> przedmiot reklamacji;<br>
-            <b>d.</b> okoliczności uzasadniające reklamację.<br>
+            <b>a.</b> name, surname and e-mail address of the user;<br>
+            <b>b.</b> the name of the Service to which the complaint relates;<br>
+            <b>c.</b> the subject of the complaint;<br>
+            <b>d.</b> justification of the complaint.<br>
           </p><br>
-          <p><b>4.</b> Reklamacje nie zawierające powyższych danych nie będą rozpatrywane przez Usługodawcę.</p>
-          <p><b>5.</b> Reklamacja zostanie rozpatrzona pozytywnie jedynie w przypadku nieprawidłowego działania Usługi lub/i problemów niepowstałych z winy Użytkownika.</p>
-          <p><b>6.</b> Reklamację należy składać na adres poczty elektronicznej: <a href="mailto:customer@dropthon.com" class="text-danger">customer@dropthon.com</a>.</p><br>
-          <h5><b>§</b> Pozyskanie treści Regualminu</h5><br>
-          <p><b>1.</b> Regulamin jest dostępny do wglądu w formie elektronicznej na stronie internetowej: <a href="https://dropthon.com/pl/tos" class="text-danger">dropthon.com/pl/tos</a>.</p><br>
-          <h5><b>§</b> Rozwiązanie umowy lub odstąpienie od umowy</h5><br>
-          <p><b>1.</b> Umowa o świadczenie Usług może być rozwiązana przez którąkolwiek ze stron.</p>
-          <p><b>2.</b> W dowolnym momencie Użytkownik ma prawo rozwiązać umowę o świadczenie Usług poprzez samodzielne usunięcie swojego konta.</p>
-          <p><b>3.</b> Usługodawca ma prawo rozwiązać umowę o świadczenie Usług w trybie natychmiastowym, w tym usunąć konto Usługobiorcy.</p>
-          <p><b>4.</b> O rozwiązaniu umowy o świadczenie Usług Usługodawca poinformuje Usługobiorcę (jeśli istnieje taka techniczna możliwość) najpóźniej w terminie 24 godzin od momentu rozwiązania.</p><br>
-          <h5><b>§</b> Termin wejścia w życie Regualminu</h5><br>
-          <p><b>1.</b> Regulamin wchodzi w życie w dniu 29 listopada 2020 roku.</p><br>
-          <h5><b>§</b> Postanowienia końcowe</h5><br>
-          <p><b>1.</b> Wszelkie spory związane ze świadczeniem Usług zgodnie z Regulaminem będą rozstrzygane przez sąd arbitrażowy.</p>
-          <p><b>2.</b> Sposób przechowywania danych osobowych Użytkownika uregulowane jest w <a href="https://dropthon.com/pl/privacy" class="text-danger">Polityce Prywatności</a>.</p>
+          <p><b>4.</b> Complaints that do not contain the above data will not be considered by the Service Provider.</p>
+          <p><b>5.</b> The complaint will be considered positively only in the event of incorrect operation of the Service and/or problems not caused by the User's fault.</p>
+          <p><b>6.</b> Complaints should be submitted to the e-mail address: <a href="mailto:customer@dropthon.com" class="text-danger">customer@dropthon.com</a>.</p><br>
+          <h5><b>§</b> Acquiring the Terms of Service</h5><br>
+          <p><b>1.</b> The Terms of Service are available in electronic form on the website: <a href="https://dropthon.com/en/tos" class="text-danger">dropthon.com/pl/tos</a>.</p><br>
+          <h5><b>§</b> Termination of the contract</h5><br>
+          <p><b>1.</b> The contract for the provision of Services may be terminated by either party.</p>
+          <p><b>2.</b> The User has the right to terminate the contract for the provision of Services at any time by deleting his account.</p>
+          <p><b>3.</b> The Service Provider has the right to terminate the contract for the provision of Services with immediate effect, including removing the Customer's account.</p>
+          <p><b>4.</b> The Service Provider will inform the Customer about the termination of the contract for the provision of Services (if there is such a technical possibility) no later than 24 hours from the moment of termination.</p><br>
+          <h5><b>§</b> Effective date of the Terms of Service</h5><br>
+          <p><b>1.</b> The Terms of Service start to apply on November 29, 2020.</p><br>
+          <h5><b>§</b> Final Provisions</h5><br>
+          <p><b>1.</b> Any disputes related to the provision of Services in accordance with the Terms of Service will be settled by the court.</p>
+          <p><b>2.</b> The way of storing the User's personal data is regulated in the <a href="https://dropthon.com/en/privacy" class="text-danger">Privacy policy</a>.</p>
     </section>
     <div class="footer-area py-5">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-xl-12">
             <div class="footer-copy-right">
-               <p>Copyleft 2020 <a href="https://stanislawowski.pl/" target="_blank">Stanisławowski Research & Development</a>  -  <a href="/pl/privacy">Polityka prywatności</a>  -  <a href="/pl/tos">Regulamin</a></p>
+               <p>Copyleft 2020 <a href="https://stanislawowski.pl/" target="_blank">Stanisławowski Research & Development</a>  -  <a href="/en/privacy">Privacy policy</a>  -  <a href="/en/tos">Terms of Service</a></p>
             </div>
           </div>
         </div>
