--- a/pl/tos.html
+++ b/pl/tos.html
@@ -130,11 +130,11 @@
           <p><b>2.</b> W dowolnym momencie Użytkownik ma prawo rozwiązać umowę o świadczenie Usług poprzez samodzielne usunięcie swojego konta.</p>
           <p><b>3.</b> Usługodawca ma prawo rozwiązać umowę o świadczenie Usług w trybie natychmiastowym, w tym usunąć konto Usługobiorcy.</p>
           <p><b>4.</b> O rozwiązaniu umowy o świadczenie Usług Usługodawca poinformuje Usługobiorcę (jeśli istnieje taka techniczna możliwość) najpóźniej w terminie 24 godzin od momentu rozwiązania.</p><br>
-          <h5><b>§</b> Termin wejścia w życie Regualminu</h5><br>
+          <h5><b>§</b> Termin wejścia w życie Regulaminu</h5><br>
           <p><b>1.</b> Regulamin wchodzi w życie w dniu 29 listopada 2020 roku.</p><br>
           <h5><b>§</b> Postanowienia końcowe</h5><br>
-          <p><b>1.</b> Wszelkie spory związane ze świadczeniem Usług zgodnie z Regulaminem będą rozstrzygane przez sąd arbitrażowy.</p>
-          <p><b>2.</b> Sposób przechowywania danych osobowych Użytkownika uregulowane jest w <a href="https://dropthon.com/pl/privacy" class="text-danger">Polityce Prywatności</a>.</p>
+          <p><b>1.</b> Wszelkie spory związane ze świadczeniem Usług zgodnie z Regulaminem będą rozstrzygane przez sąd.</p>
+          <p><b>2.</b> Sposób przechowywania danych osobowych Użytkownika uregulowany jest w <a href="https://dropthon.com/pl/privacy" class="text-danger">Polityce Prywatności</a>.</p>
     </section>
     <div class="footer-area py-5">
       <div class="container">
