--- a/en/tos.html
+++ b/en/tos.html
@@ -105,7 +105,8 @@
             <b>d.</b> any modification of the Services provided, tools and methods of operation of the Websites in order to improve the operation of the Website.<br>
           </p>
           <p><b>2.</b> The Service Provider reserves the right to discontinue the provision of the Service, delete all data of the Service Users and take any other actions permitted by law related to the Website.</p>
-          <p><b>3.</b> The User has the right to manage his data at any time via the "Account" page on the Website.</p><br>
+          <p><b>3.</b> The User has the right to manage his data at any time via the "Account" page on the Website.</p>
+          <p><b>4.</b> A maximum of one person can use one account on the Website.</p><br>
           <h5><b>§</b> Changing the Terms of Service</h5><br>
           <p><b>1.</b> The Terms of Service may be changed by the Service Provider, provided that the updated Terms of Service will be available on the Website.</p>
           <p><b>2.</b> If the Customer does not accept the amendment to the Terms of Service, he may delete the Account and then the provisions of the new Terms of Service will not apply to him.</p>
