--- a/pl/tos.html
+++ b/pl/tos.html
@@ -105,7 +105,8 @@
             <b>d.</b> dowolnej modyfikacji świadczonych Usług, narzędzi oraz sposobu działania Serwisów, w celu poprawy działalności Serwisu.<br>
           </p>
           <p><b>2.</b> Usługodawca zastrzega sobie prawo do zaprzestania świadczenia Usługi, usunięcia wszelkich danych Usługobiorców oraz podjęcia wszelkich innych dozwolonych prawem czynności związanych z Serwisem.</p>
-          <p><b>3.</b> Użytkownik ma prawo do zarządzania swoimi danymi w dowolnym momencie, za pośrednictwem zakładki "Konto" w Serwisie.</p><br>
+          <p><b>3.</b> Użytkownik ma prawo do zarządzania swoimi danymi w dowolnym momencie, za pośrednictwem zakładki "Konto" w Serwisie.</p>
+          <p><b>4.</b> Z jednego konta w Serwisie korzystać może maksymalnie jedna osoba.</p><br>
           <h5><b>§</b> Zmiana Regulaminu</h5><br>
           <p><b>1.</b> Regulamin może zostać zmieniony przez Usługodawcę z zastrzeżeniem, że zaktualizowany Regulamin zostanie udostępniony w Serwisie internetowym.</p>
           <p><b>2.</b> W przypadku braku akceptacji zmiany Regulaminu przez Usługobiorcę, może on usunąć Konto i wówczas postanowienia nowego Regulaminu nie będą miały wobec niego zastosowania.</p>
