--- a/pl/index.html
+++ b/pl/index.html
@@ -26,6 +26,7 @@
         <h1 class="title-main">Najbardziej<br>zaawansowany<br>streetwear bot.</h1><br>
         <a href="https://panel.dropthon.com/" class="btn radius-btn py-3 px-3"><i class="fa fa-sign-in font-weight-bold"></i> LOGOWANIE</a>
         <a href="/pl/faq" class="btn radius-btn py-3 px-3"><i class="fa fa-question-circle font-weight-bold"></i> FAQ</a>
+        <a href="/pl/tutorials" class="btn radius-btn py-3 px-3"><i class="fa fa-play font-weight-bold"></i></a>
       </div>
       <img src="/static/img/example_pl.png" class="example">
     </div>
