--- a/pl/index.html
+++ b/pl/index.html
@@ -19,6 +19,7 @@
       gtag('js', new Date());
       gtag('config', 'UA-169644853-2');
     </script>
+    <script data-ad-client="ca-pub-9165101222978551" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
    </head>
    <body>
     <section>
